[build-system]
requires = ["setuptools>=65.6,<76.0", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "PyChromecast"
version      = "14.0.5"
description  = "Python module to talk to Google Chromecast."
readme       = "README.rst"
authors      = [
    {name = "Paulus Schoutsen", email = "paulus@paulusschoutsen.nl"}
]
requires-python = ">=3.11.0"
dependencies = [
    "protobuf>=4.25.1",
    "zeroconf>=0.25.1",
    "casttube>=0.2.0",
]
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/home-assistant-libs/pychromecast"

[tool.black]
exclude = 'pb2'

[tool.rstcheck]
# README.rst has embedded python examples which show the interactive interpreter output
# that's not valid Python, so we disable the check
ignore_languages = ["python"]

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pychromecast*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
